# PyTorch-Cookbook-for-Noobs

./: 01-numpy.ipynb  02-reading-pytorch.ipynb  README.md  main.py  pyproject.toml
notebooks/: 01-numpy.ipynb  01-tensors.ipynb  02-autograd.ipynb  02-reading-pytorch.ipynb
