[project]
name = "pytorch-cookbook-for-noobs"
version = "0.1.0"
description = "How to learn PyTorch for Noobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "rich>=14.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "tqdm>=4.67.0",
]

# PyTorch index for CUDA 11.8
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# Force torch and torchvision to use CUDA 11.8 index
[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }